@@ -3112,29 +3112,24 @@ struct MobHealth
 };
 
 struct Track_Struct {
-	uint16 entityid;
-	uint16 y;
-	uint16 x;
-	uint16 z;
+	uint32 entityid;
+	float distance;
+	// Fields for SoD and later
+	uint8 level;
+	uint8 is_npc;
+	char name[64];
+	uint8 is_pet;
+	uint8 is_merc;
 };
 
 struct Tracking_Struct {
+	uint16 entry_count;
 	Track_Struct Entrys[0];
 };
 
-// Looks like new tracking structures - Opcode: 0x57a7
-struct Tracking_Struct_New {
-	uint16 totalcount;			// Total Count of mobs within tracking range
-	Track_Struct Entrys[0];
-};
-
-struct Track_Struct_New {
-	uint16 entityid;				// Entity ID
-	uint16 unknown002;			// 00 00
-	uint32 unknown004;			//
-	uint8  level;				// level of mob
-	uint8  unknown009;			// 01 maybe type of mob? player/npc?
-	char  name[1];				// name of mob
+struct TrackTarget_Struct
+{
+	uint32	EntityID;
 };
 
 
