@@ -1094,7 +1094,7 @@ namespace Titanium
 		for (int i = 0; i < EntryCount; ++i, ++eq, ++emu)
 		{
 			OUT(entityid);
-			OUT(padding002);
+			//OUT(padding002);
 			OUT(distance);
 		}
 
