@@ -249,7 +249,7 @@ OP_ItemLinkClick=0x4cef
 OP_ItemPreview=0x6b5c
 OP_NewSpawn=0x6097
 OP_Track=0x17e5
-OP_TrackTarget=0x0029
+OP_TrackTarget=0x695e
 OP_TrackUnknown=0x4577
 OP_ClickDoor=0x3a8f
 OP_MoveDoor=0x08e8
