@@ -1,5 +1,8 @@
 EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
+== 12/22/2014 ==
+Trevius: (RoF2) Fixed Tracking.
+
 == 12/21/2014 ==
 Trevius: (RoF2) Fixed Extended Targets Window by correcting opcodes.
 Trevius: (RoF/RoF2) Fixed Guild Rank in the Player Profile, which prevents the guild rank message on login/zone.
